@@ -1,6 +1,7 @@
 2009-11-12  Ian Beckwith  <ianb@erislabs.net>
 
 	* New elvi: finkpkg: search Fink packages.
+	* surfraw.IN: w3_parse_args: avoid bogus initial space in w3_args
 
 2009-11-11  Ian Beckwith  <ianb@erislabs.net>
 
